added contact me section

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <h1 class = "sub-title">My Work</h1>
                 <div class = "work-list">
                     <div class="work">
-                        <img src = "images/work-1.png"> 
+                        <img src = "images/work1.png"> 
                         <div class = "layer">
                             <h3>Weather App</h3>
                             <p>A simple and elegant weather application that allows users to check real-time weather conditions for any city in the world.
@@ -91,19 +91,38 @@ Built using HTML, CSS, and JavaScript, with live data fetched from the OpenWeath
                         </div>
                     </div>
                     <div class="work">
-                        <img src = "images/work-2.png">
+                        <img src = "images/work2.png">
                         <div class = "layer">
                             <h3>Employee Payroll Management Desktop App</h3>
                             <p>Java-based desktop application designed to simplify and automate employee payroll operations for organizations. The system provides an clean graphical user interface (GUI) built using Java Swing and uses PostgreSQL as the backend database for secure and efficient data storage.</p>
                         </div>
                     </div>
                     <div class="work">
-                        <img src = "images/work-3.png">
+                        <img src = "images/work3.png">
                         <div class = "layer">
                             <h3>Console-based Tic-Tac-Toe</h3>
                             <p>A simple console-based Tic Tac Toe game implemented in Java. The game supports two players who take turns placing their marks (X and O) on a 3*3 board.</p>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+
+        <!-----------contact--------------------->
+        <div id = "contact">
+            <div class = "container">
+                <div class = "row">
+                    <div class="contact-left">
+                    <h1 class = "sub-title">Contact Me</h1>
+                    <p>snehaelzadavid70@gmail.com</p>
+                    <p>9443309948</p>
+                    <div class = "social icons">
+                        <a href = "https://www.linkedin.com/in/sne
+ha-elza-david-675600348"><i class="fa-brands fa-linkedin"></i></a>
+                    </div>
+                    </div>
+                    <div class="contact-right"></div>
+
                 </div>
             </div>
         </div>
