--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@ Built using HTML, CSS, and JavaScript, with live data fetched from the OpenWeath
                             <a href = "https://www.linkedin.com/in/sneha-elza-david-675600348" target="_blank">
                             <i class="fa-brands fa-linkedin"></i></a>
                         </div>
+                        <a href = "images/resume.pdf" download class = "btn btn2">Download Resume</a>
                     </div>
                 
                     <div class="contact-right">
