--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
                      <ul>
                      <li><a href = "#">Home</a></li>
                      <li><a href = "#">About</a></li>
-                     <li><a href = "#">Services</a></li>
                      <li><a href = "#">Portfolio</a></li>
                      <li><a href = "#">Contact</a></li>
                      </ul>
@@ -129,7 +128,7 @@ Built using HTML, CSS, and JavaScript, with live data fetched from the OpenWeath
                             <input type = "text" name = "Name" placeholder="Your Name" required>
                             <input type = "email" name = "email" placeholder="Your email" required>
                             <textarea name = "Message" rows = "6" placeholder="Your Message"></textarea>
-                            <button type = "submit">Submit</button>
+                            <button type = "submit" class = "btn btn2">Submit</button>
                             
                         </form>
                     </div>
