Modified About Me Section

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
                   <nav>
                      <img src="images/Picsart_25-12-28_17-23-01-277.png" class = "logo">
                      <ul>
-                     <li><a href = "#">Home</a></li>
-                     <li><a href = "#">About</a></li>
-                     <li><a href = "#">Portfolio</a></li>
-                     <li><a href = "#">Contact</a></li>
+                     <li><a href = "#header">Home</a></li>
+                     <li><a href = "#about">About</a></li>
+                     <li><a href = "#portfolio">Portfolio</a></li>
+                     <li><a href = "#contact">Contact</a></li>
                      </ul>
                     </nav>
 
                 <div class = "header-text">
-                     <p>UI/UX Designer</p>
+                     <p>Tech Enthusiast | Aspiring developer :)</p>
                      <h1>Hi, I'm <span>Sneha</span> Elza<br> David from LBSITW</h1>
                 </div>      
             </div>
@@ -53,7 +53,7 @@
                             </div>
                             <div class = "tab-contents active-tab" id = "skills">
                                 <ul>
-                                    <li><span>HTML CSS JavaScript</span><br>Designing Web Interfaces</li>
+                                    <li><span>HTML, CSS, JavaScript</span><br>Designing Web Interfaces</li>
                                      <li><span>Machine Learning</span><br>Data preprocessing, model training & evaluation</li>
                                       <li><span>Programming</span><br>Java, C</li>
                                 </ul>
@@ -61,14 +61,28 @@
 
                             <div class = "tab-contents" id = "experience">
                                 <ul>
-                                    <li><span>June 2025 - July 2025</span><br>Worked as a Summer Research Intern at College of Engineering (CET) Trivandrum</li>
+                                    <!--<li><span>June 2025 - July 2025</span><br>Worked as a Summer Research Intern at College of Engineering (CET) Trivandrum</li>-->
+                                    <li>
+                                    <span>June 2025 – July 2025</span><br><br>
+                                    Summer Research Intern, College of Engineering Trivandrum<br>
+                                     <ul>
+                                        <li>Worked on machine learning concepts including data preprocessing and model training.</li>
+                                        <li>Analyzed datasets and evaluated model performance using basic metrics.</li>
+                                        <li>Gained hands-on experience in research methodology and problem-solving.</li>
+                                    </ul>
+                                    </li>
                                 </ul>
                             </div>
 
                              <div class = "tab-contents" id = "education">
                                 <ul>
-                                    <li><span>2024 - Present</span><br>B.Tech in Computer Science and Engineering at LBS Institute of Technology for Women</li>
-                                     <li><span>2022-2024</span><br>Christ Nagar Higher Secondary School (ICSE)</li>
+                                    <li><span>2024 -  Present</span><br>
+                                        B.Tech in Computer Science and Engineering at LBS <br> Institute of Technology for Women<br>
+                                        <small>CGPA: 9.04</small>
+                                    </li>
+                                     <li><span>2022 - 2024</span><br>Christ Nagar Higher Secondary School (ICSE)<br>
+                                    <small>Grade: 94.2</small>
+                                </li>
                                 </ul>
                             </div>
                    </div>
