Added footer and screenshots

--- a/index.html
+++ b/index.html
@@ -151,7 +151,12 @@ Built using HTML, CSS, and JavaScript, with live data fetched from the OpenWeath
             </div>
         </div>
 
-        <script>
+        <!--------------------------------FOOTER------------->
+        <footer class="footer">
+    <p>Made with ❤️ by Sneha</p>
+</footer>
+
+        <script>  
             var tablinks = document.getElementsByClassName("tab-links");
             var tabcontents = document.getElementsByClassName("tab-contents");
             function opentab(tabname){
