Added github repo links for projects

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                             <h3>Weather App</h3>
                             <p>A simple and elegant weather application that allows users to check real-time weather conditions for any city in the world.
 Built using HTML, CSS, and JavaScript, with live data fetched from the OpenWeather API.</p>
+                        <a href="https://github.com/snehaelzadavid06/Weather-App.git"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
                     <div class="work">
@@ -109,6 +110,7 @@ Built using HTML, CSS, and JavaScript, with live data fetched from the OpenWeath
                         <div class = "layer">
                             <h3>Employee Payroll Management Desktop App</h3>
                             <p>Java-based desktop application designed to simplify and automate employee payroll operations for organizations. The system provides an clean graphical user interface (GUI) built using Java Swing and uses PostgreSQL as the backend database for secure and efficient data storage.</p>
+                            <a href="https://github.com/snehaelzadavid06/Employee-Payroll.git"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
                     <div class="work">
@@ -116,6 +118,7 @@ Built using HTML, CSS, and JavaScript, with live data fetched from the OpenWeath
                         <div class = "layer">
                             <h3>Console-based Tic-Tac-Toe</h3>
                             <p>A simple console-based Tic Tac Toe game implemented in Java. The game supports two players who take turns placing their marks (X and O) on a 3*3 board.</p>
+                            <a href="https://github.com/snehaelzadavid06/Tic-Tac-Toe.git"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
                 </div>
