Changed Works section

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <h1 class = "sub-title">My Work</h1>
                 <div class = "work-list">
                     <div class="work">
-                        <img src = "images/work1.png"> 
+                        <img src = "images/work1.jpg"> 
                         <div class = "layer">
                             <h3>Weather App</h3>
                             <p>A simple and elegant weather application that allows users to check real-time weather conditions for any city in the world.
